examples/sample-product-chart/chart-test/reports/run-bats-f17-3-containers-86409/scenario-labels-on-20260608-103946/artifacts/manifests/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-08T14:40:13Z"
    generation: 1
    labels:
      app: sample
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "432"
    uid: 3e11c24c-0f61-453d-9381-390c6fa8cac5
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: sample
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
